Sun  Sep 12  2004	H. Wade Minter (minter@lunenburg.org)
     * Add a Publisher choice to the bulk_add routine.
     * Refactor a couple of looped database queries to use placeholders.

Sat  Sep 11  2004	H. Wade Minter (minter@lunenburg.org)
     * Fixed a similar bug in the edit_categories function.
     * Fixed an inaccuracy in progress reporting with update_times, due
       to the previous policy of ignoring invalid files.
     * Provide a sane -initialdir to getOpenFile, getSaveFile, and
       chooseDirectory, if none is set.
     * Remove obsolete code to upgrade to 1.7 (song times in database) and
       1.10 (publisher) table schemas.  If they haven't done it by now,
       this is handled by the upgrade_20.pl utility.
     * Work around breakage in bulk_add if the directory has spaces in it.
     * Format the information in the Advanced Date Search a little nicer.
     * Better window titles for Load/Save dialogs.

Fri  Sep 10  2004	H. Wade Minter (minter@lunenburg.org)
     * Fixed a bug in the delete_categories function that was causing
       an extra space to get added to the category code.
     * Refactor the get_rows subroutine to be cleaner.

Thu  Sep 9  2004	H. Wade Minter (minter@lunenburg.org)
     * Move the default setup stuff (formerly in quicksetup.pl) into the
       main program, since we don't have to deal with the complexity of
       MySQL anymore.

Wed  Sep 8  2004	H. Wade Minter (minter@lunenburg.org)
     * Work around the lack of $dbh->rows in SQLite by implementing 
       a hand-rolled row counter.

Tue  Sep 7  2004	H. Wade Minter (minter@lunenburg.org)
     * Fixed a bug in the "Select new location for DB file" dialog in
       Preferences.
     * Moved the get_homedir code to a subroutine.
     * Bumped version to 2.0pre1

Mon  Sep 6  2004	H. Wade Minter (minter@lunenburg.org)
     * Happy birthday to me!
     * Added support for AAC files (.m4a, .mp4) via the MP4::Info module.